2007-01-20 Nicolas Roffet <nicolas-kde@roffet.com>
	* Big clean-up (2nd part) to have a clean API between the logical game and the graphic widget (to be able to substitute it with a new one in the future).
	* User input is now managed by the graphic widget.
	* Full rewrite of the methode that calculates the trajectory of the laser ray.
	* Object "gameBoard" removed.
	* Documentation of the code of the class KBBBoard.

2007-01-18 Nicolas Roffet <nicolas-kde@roffet.com>
	* New private methode "KBBGame::comfirmGameEndIfNeeded()" to avoid duplication of code.
	* New member variable "m_gameReallyStarted" to avoid to annoy the user with the confirmation of the end of the game when the player didn't really start to play.
	* Removed several redundant tests "if (running)".
	* small clean up in "KBBGame::giveUp()".
	* Clean up: division of the class (and file) KBBGame in 2 classes (and 2 files) to remove a lot of dependencies to the graphic widget (KBBGraphic) in the main window:
	    - KBBGame: main window of the game
	    - KBBBoard: logical board of the game

1999-06-07  Petter Reinholdtsen <pere@td.org.uit.no>
	* kbbgame.cpp: Changed text Quit to Exit to match KDE style guide.

0.3.0 from 0.2.6 (17.1.1999)
	- KBBGraphic derived only from QWidget, not QTableView
	  -> a complete rewrite of gfx stuff
	  -> massive changes almost everywhere
	- minimal size fixed
	- new icons (I am just learning the povray :-)
0.2.6 from 0.2.5 (25.8.1998)
	- the game is active after starting
	- fixed bad drawing after setting the board size
	- config. scripts from new kexample (KDE 1.0)
	- moc dependencies in Makefile.am done by automoc to
	  avoid problems on Solaris (bug report by David Faure)
	- some string fixes for better translation
0.2.5 from 0.2.4 (19.3.1998)
	- es language support added
	- sk language support added
0.2.4 from 0.2.3 (6.3.1998)
	- pt language support added
	- it language support added
0.2.3 from 0.2.2 (10.2.1998)
	- new icon for fired laser
	- new icon for "give up"